build : git ignore 수정